[gd_scene load_steps=6 format=2]

[ext_resource path="res://White32x32.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Player_Enemy/Enemy_0_1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.375, 51.5 )

[node name="Enemy_0_1" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="Sprite"]
position = Vector2( 15, -1.90735e-06 )
scale = Vector2( 0.15625, 0.15625 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Ray_Player" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 450, 0 )

[node name="Ray_Player2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 430, -42 )

[node name="Ray_Player3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 400, -98 )

[node name="Ray_Player_Left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -300, 0 )

[node name="Ray_Player_Left2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -270, -42 )

[node name="Ray_Player_Left3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -203, -77 )

[node name="Ray_Attack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 103, 1 )

[node name="Ray_Attack2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 95, -41 )

[node name="Ray_Attack3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, -64 )

[node name="Label" type="Label" parent="."]
margin_left = -35.0
margin_top = -50.0
margin_right = 36.0
margin_bottom = -36.0
text = "robot phe lieu"

[node name="Attack_Area_Enemy_0_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area_Enemy_0_1"]
position = Vector2( 72.625, -20 )
shape = SubResource( 2 )
